--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+
+package-lock.json
+yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
