--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "@psf/bch-js": "^4.20.1",
     "axios": "^0.21.1",
+    "bch-message-lib": "^1.13.9",
+    "dotenv": "^10.0.0",
+    "get-windows-env": "^0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "web3.storage": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
